add: fetch to "jsonplaceholder"; add: users list; add: filter? sort

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,4 +10,8 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+  <footer>
+    <div id="footer"></div>
+    <!-- <script type="module" src="/src/footer.ts"></script> -->
+  </footer>
 </html>
