edit: footer fix: card-array shifting and centering

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </body>
   <footer>
     <div id="footer"></div>
-    <!-- <script type="module" src="/src/footer.ts"></script> -->
+    <script type="module" src="/src/components/footer.ts"></script>
   </footer>
 </html>
