add: header; add: semantic html; fix: user-list positing; fix: footer dark theme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>testtask-vanilla-ts-vite</title>
   </head>
   <body>
+    <header>
+      <img src="/public/iconic.svg" class="logo" alt="Iconic logo" />
+    </header>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
